--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "native_app",
     "slug": "native_app",
+    "backgroundColor":"#5b21b6",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
